# TransformerEngine

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Acknowledgements.txt  CODEOWNERS  CONTRIBUTING.rst  CPPLINT.cfg  Dockerfile.base  Dockerfile.devel  Dockerfile.docs  Dockerfile.qa  MANIFEST.in  NVFP4_GROUPED_GEMM_CHANGES.md  NVFP4_NEXT_STEPS.md  README-ci.md  README.rst  SECURITY.md  VERSION  bench_topk.py  docker-build.sh  docker_build_and_test.sh  missing_fusions.md  patch_swizzle.py  patch_swizzle_cpp.py  plan.md  pylintrc  pyproject.toml  requirements.txt  run_l0_tests.sh  run_l1_tests.sh  setup.py  te_sm121_test_results.txt  te_version.py  test.py  test_einsum.py  test_grouped_quantize.py  transformer_engine_torch.cpython-312-x86_64-linux-gnu.so.bak  tt.py
tests/cpp/: CMakeLists.txt  a.txt  run_norm_tests.sh  test_common.cu  test_common.h
tests/cpp/comm_gemm/: CMakeLists.txt  test_comm_gemm.cu
tests/cpp/operator/: CMakeLists.txt  test_act.cu  test_cast.cu  test_cast_current_scaling.cu  test_cast_current_scaling_grouped.cu  test_cast_dbias.cu  test_cast_dbias_dgelu.cu  test_cast_float8blockwise.cu  test_cast_float8blockwise_grouped.cu  test_cast_fp8_grouped.cu  test_cast_gated_swiglu.cu  test_cast_mxfp8.cu  test_cast_mxfp8_gated_swiglu.cu  test_cast_mxfp8_grouped.cu  test_cast_nvfp4.cu  test_cast_nvfp4_transpose.cu  test_cast_nvfp4_transpose_grouped.cu  test_cast_transpose.cu  test_cast_transpose_current_scaling.cu  test_cast_transpose_dbias.cu  test_cast_transpose_dbias_dgelu.cu  test_cast_transpose_dgeglu.cu  test_causal_softmax.cu  test_cumsum.cu  test_dequantize_float8blockwise_grouped.cu  test_dequantize_fp8_grouped.cu  test_dequantize_mxfp8.cu  test_dequantize_mxfp8_grouped.cu  test_dequantize_nvfp4.cu  test_dgeglu.cu  test_geglu.cu  test_gelu.cu  test_grouped_gemm.cu  test_layernorm.cu  test_memset.cu  test_multi_cast_transpose.cu  test_multi_padding.cu  test_multi_swizzle.cu  test_multi_tensor_adam_mxfp8.cu  test_multi_unpadding.cu  (+11 more)
tests/cpp/util/: CMakeLists.txt  test_nvrtc.cpp  test_string.cpp
tests/cpp_distributed/: CMakeLists.txt  run_test_ep.sh  test_comm_gemm.cu  test_ep.cu  test_ep_common.h  test_ep_coverage.cu  test_ep_init.cu  test_ep_pipeline.cu
tests/pytorch/custom_ort_ops/: .gitignore  CMakeLists.txt  README.md  build.sh  custom_op_library.cc  custom_op_library.h
transformer_engine/: CMakeLists.txt  __init__.py  _version.py
transformer_engine/cmake/: CMakeCache.txt  FindCUDNN.cmake  FindCUDNN_FRONTEND.cmake  Makefile  cmake_install.cmake  compile_commands.json  report.txt
transformer_engine/cmake/common/: Makefile  cmake_install.cmake
transformer_engine/common/: 1  CMakeLists.txt  CMakeLists.txt.rej  __init__.py  comm_handle.cpp  common.cu  common.h  compile_commands.json  cudnn_frontend.py  cudnn_utils.cpp  cudnn_utils.h  libtransformer_engine.version  nvtx.h  pybind.cpp  pycudnn.cpp  recipe.py  transformer_engine.cpp  tvm_ffi_bridge.h  ubnext.cu  utils.cuh  utils.py
transformer_engine/common/CuTeDSL/: __init__.py  activations.py  utils.py  utils_fp8.py
transformer_engine/common/activation/: activation_template.h  gelu.cu  gelu_dbias.cu  gelu_grouped.cu  gelu_grouped_dbias.cu  glu.cu  relu.cu  relu_dbias.cu  relu_grouped.cu  relu_grouped_dbias.cu  scaled_activation.cu  scaled_activation.h  scaled_srelu.cu  scaled_swiglu.cu  swiglu.cu  swiglu_dbias.cu  swiglu_grouped.cu  swiglu_grouped_dbias.cu
transformer_engine/common/cast/: cast.cu  cast_dbias.cu  cast_everything.cuh  cast_grouped.cu  cast_grouped_dbias.cu  grouped_fp8_current_scaling.cu  grouped_fp8_current_scaling_wrapper.cpp
transformer_engine/common/cmake/: cuDNN.cmake
transformer_engine/common/comm_gemm/: comm_gemm.cpp
transformer_engine/common/comm_gemm_overlap/: comm_gemm_overlap.cpp  userbuffers-host.cpp  userbuffers.cu
transformer_engine/common/cudnn_flash_attn/: cudnn_flash_attn_fp8.cu
transformer_engine/common/cudnn_fmha_fp8/: cudnn_fmha_fp8.cu
transformer_engine/common/cutedsl/: __init__.py  cutedsl_utils.py
transformer_engine/common/dpct_output/: report  stdout.apis.csv
transformer_engine/common/dropout/: dropout.cu
transformer_engine/common/ep/: ep_api.cpp  ep_api_stub.cpp  (+4 more)
transformer_engine/debug/: __init__.py
transformer_engine/dpct_output/: MainSourceFiles.yaml
transformer_engine/jax/: CMakeLists.txt  __init__.py  activation.py  attention.py  checkpoint_policies.py  cpp_extensions.py  dense.py  dot.py  einsum.py  ep.py  fmha.py  fp4.py  fp8.py  fused_attn.py  gemm.py  inspect.py  layer_math.py  layernorm.py  layernorm_dense.py  layernorm_linear.py  layernorm_mlp.py  linear.py  mlp.py  module.py  moe.py  mt_permutation.py  permutation.py  pyproject.toml  router.py  setup.py  sharding.py  softmax.py  transformer.py  utils.py  version_utils.py
transformer_engine/new/: __init__.py  multiple_dispatch.py
transformer_engine/paddle/: __init__.py  constants.py  cpp_extensions.py  distributed.py  fp8.py  fp8_buffer.py  fp8_buffer_ensure_no_dynamic_tensor.py  profile.py  recompute.py  setup.py  utils.py
transformer_engine/plugin/: __init__.py  test_utils.py
transformer_engine/plugins/: backend.py  backend_fl.py  backend_native.py  import_utils.py  logger.py  register.py
transformer_engine/pytorch/: .gitignore  1.txt  MANIFEST.in  __init__.py  _extra_state.py  _stable_ops.py  _stable_torch_module.py  _tex.py  attention.py  constants.py  cpp_extensions.py  cpu_offload.py  cpu_offload_old_path.py  cpu_offload_v1.py  cross_entropy.py  distributed.py  distributed_weight.py  dynamo.py  emha.py  ep.py  export.py  float8_tensor.py  fp8.py  fp8_dtype.py  graph.py  inference.py  jit.py  kv_cache_manager.py  kv_cache_manager_non_paged.py  kv_cache_manager_paged.py  linear_cross_entropy.py  module.py  multi_head_attention.py  newton_schulz.py  numerics_debug.py  onnx_extensions.py  permutation.py  pipeline_aware_cpu_offload.py  pyproject.toml  quantization.py  (+13 more)
transformer_engine/tensorflow/: CMakeLists.txt  __init__.py  constants.py  fp8.py  jit.py  module.py  recipe.py  softmax.py  transformer.py  utils.py
(+2097 files in other folders)
