# Copyright (c) 2022-2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# See LICENSE for license information.

[build-system]
# CUDA build-time requirements are defined in `build_tools/build_backend.py`.

# Select build dependencies with --config-setting cuda-version=<version>.
build-backend = "build_tools.build_backend"
backend-path = ["."]
